Final fixes for dark mode

--- a/styles/shared.css
+++ b/styles/shared.css
@@ -47,7 +47,7 @@
   --primary-foreground: 0 85.7% 97.3%;
   --secondary: 0 0% 14.9%;
   --secondary-foreground: 0 0% 98%;
-  --muted: 0 0% 14.9%;
+  --muted: 0 0% 30%;
   --muted-foreground: 0 0% 63.9%;
   --accent: 0 0% 14.9%;
   --accent-foreground: 0 0% 98%;
@@ -106,7 +106,7 @@ img {
 }
 
 .modal-content {
-  background-color: hsl(var(--background));
+  background-color: hsl(var(--muted));
   width: 50%;
   min-width: 300px;
   height: auto;
@@ -137,6 +137,10 @@ img {
   height: 10rem;
   color: hsl(var(--primary));
   margin: 0 auto;
+}
+
+.modal-content:has(.modal-alarm) .modal-alarm .alarm-message {
+  color: hsl(var(--foreground));
 }
 
 .frame-player {
@@ -217,8 +221,8 @@ img {
 
 #theme-switch svg {
   fill: hsl(var(--primary));
-  width: 16px;
-  height: 16px;
+  width: 18px;
+  height: 18px;
   position: absolute;
   transition: transform 0.4s ease-out, opacity 0.4s ease;
 }
